--- a/style.css
+++ b/style.css
@@ -14,13 +14,14 @@ body {
   background: #000000;
 }
 .time {
+  font-size: 40vh;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 250px;
+
   color: rgb(21, 42, 60);
 }
 .date {
+  font-size: 10vh;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 50px;
   color: rgb(21, 42, 60);
 }
 .daynight {
@@ -38,4 +39,25 @@ body {
 }
 .show {
   display: block;
+}
+@media only screen and (max-width: 1111px) {
+  .time {
+    font-size: 11vh;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+
+    color: rgb(21, 42, 60);
+  }
+  .date {
+    font-size: 3vh;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    color: rgb(21, 42, 60);
+  }
+  .daynight {
+    position: relative;
+    display: flex;
+    width: 30px;
+    height: 30px;
+  }
 }
